# bhuzmod-manager

./: README.md  flake.nix  package-lock.json  package.json  shell.nix
.run/: dev.run.xml  setup-nix.run.xml
sample/: Cargo.toml
sample/resource/: TradeWithWithers.pak  info.json  modsettings.lsx
sample/src/: main.rs  modsettings.rs
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
