[package]
name = "sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.31.0"
serde-xml-rs = "0.6.0"